kubernetes/apps/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  type: LoadBalancer # klipper binds 53 tcp/udp on the node IP
  selector:
    app: pihole
  ports:
    - { name: dns-tcp, port: 53, targetPort: 53, protocol: TCP }
    - { name: dns-udp, port: 53, targetPort: 53, protocol: UDP }
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - { name: http, port: 80, targetPort: 80 }
