kubernetes/apps/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: nginx
  tls:
    - hosts: [pihole.lab.home.arpa]
      secretName: pihole-tls
  rules:
    - host: pihole.lab.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
